advanced/autoscaling/hpa/svc_with_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-autoscaling-backend
  labels:
    app: go-autoscaling
spec:
  type: NodePort
  selector:
    app: go-autoscaling
    tier: web
  ports:
    - port: 8080
      targetPort: 8080
